# api_cross_social

blog/: .dockerignore  .flake8  .gitignore  Dockerfile  INTEGRACAO_RAPIDA.md  WOD_API_DOCUMENTATION.md  WOD_API_OVERVIEW.md  WOD_API_SUMMARY.md  WOD_CHECKLIST_FINAL.md  WOD_CONVERSAO_RESUMO.md  WOD_INDEX.md  WOD_QUICKSTART.md  WOD_README.md  WOD_VIEWS_TRADICIONAL_GUIA.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt
blog/.devcontainer/: devcontainer.json
blog/.github/workflows/: cd.yml  ci.yml
blog/Event/: admin.py  forms.py  models.py  serializers.py  views.py
blog/Event/migrations/: 0001_initial.py  0017_alter_event_date_end_alter_event_date_initial.py  0018_alter_event_date_end_alter_event_date_initial.py  0019_alter_event_date_end_alter_event_date_initial.py  0020_alter_event_date_end_alter_event_date_initial.py  0021_alter_event_date_end_alter_event_date_initial.py  0022_alter_event_date_end_alter_event_date_initial.py  0023_alter_event_date_end_alter_event_date_initial.py  0024_alter_event_date_end_alter_event_date_initial.py  0025_alter_event_date_end_alter_event_date_initial.py  0026_alter_event_date_end_alter_event_date_initial.py  (+69 more)
blog/Social/: admin.py  forms.py  models.py  serializers.py  tasks.py  views.py
blog/Team/: admin.py  apps.py  models.py  serializers.py  views.py
blog/WOD/: admin.py  api_urls.py  apps.py  form.py  models.py  scripts.py  serializers.py  signals.py  views.py  viewsets.py
blog/account/: admin.py  forms.py  models.py  serializers.py  views.py
blog/app/: Procfile  celery.py  settings.py  urls.py
(+105 files in other folders)
